# apm-partition-forensic

./: .gitleaks.toml  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  mkdocs.yml
.github/workflows/: ci.yml  fuzz.yml
core/: Cargo.toml  README.md
core/src/: lib.rs
docs/: index.md  privacy.md  terms.md  validation.md
forensic/: Cargo.toml  README.md
forensic/src/: analyse.rs  findings.rs  lib.rs
forensic/tests/: analyse_tests.rs  canonical_finding_tests.rs  error_tests.rs  map.rs  proptests.rs  real_apm_oracle.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyse.rs  fuzz_forensic.rs  fuzz_parse.rs
src/: analyse.rs  findings.rs  lib.rs  report.rs
tests/: analyse_tests.rs  canonical_finding_tests.rs  map.rs  proptests.rs  report_tests.rs
tests/data/: README.md
