[package]
name = "apm-forensic"
version = "0.4.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Forensic-grade Apple Partition Map (APM) reader — Driver Descriptor Map + partition entries (name, type, start, count) from a byte buffer"
repository = "https://github.com/SecurityRonin/apm-forensic"
homepage = "https://github.com/SecurityRonin/apm-forensic"
documentation = "https://docs.rs/apm-forensic"
readme = "README.md"
keywords = ["forensics", "apple", "partition", "apm", "dfir"]
categories = ["parser-implementations", "filesystem"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
# Knowledge layer (sibling repo): Apple Partition Map partition-type strings.
forensicnomicon = "0.3.1"

[features]
default = []
# Derive `serde::Serialize` on the analysis types for JSON report output.
serde = ["dep:serde", "forensicnomicon/serde"]

[dev-dependencies]
serde_json = "1"
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
