[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/SecurityRonin/apm-partition-forensic"
homepage = "https://github.com/SecurityRonin/apm-partition-forensic"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `apm` version lives here
# too, so a bump touches one line instead of every member + dev-dep + fuzz.
[workspace.dependencies]
apm = { path = "core", version = "0.5.0", package = "apm-partition-core" }
forensicnomicon = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Paranoid: production parsers must never panic on crafted input. Tests opt out
# via `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))]`.
unwrap_used = { level = "deny", priority = 0 }
expect_used = { level = "deny", priority = 0 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
