[package]
# The crates.io name `apm-core` is already taken by a third party (0.1.50), so
# we publish the reader as `apm-partition-core` while keeping the ergonomic
# import path `use apm::…` via `[lib] name = "apm"`.
name = "apm-partition-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure-Rust read-only Apple Partition Map (APM) reader — Driver Descriptor Map + partition entries (name, type, start, count) from a byte buffer"
license.workspace = true
authors = ["Albert Hui <albert@securityronin.com>"]
keywords = ["forensics", "apple", "partition", "apm", "dfir"]
categories = ["parser-implementations", "filesystem"]
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/apm-partition-core"

[lib]
name = "apm"

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
# Derive `serde::Serialize` on the parser types for JSON report output.
serde = ["dep:serde"]

[lints]
workspace = true
