[package]
name = "apm-partition-forensic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forensic anomaly auditor for Apple Partition Maps — map-count mismatch, overlapping/out-of-bounds partitions, residual entries, unmapped regions as graded report::Finding, built on apm-partition-core"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/apm-partition-forensic"
keywords = ["forensics", "apple", "partition", "apm", "dfir"]
categories = ["parser-implementations", "filesystem"]

# The crates.io name `apm-forensic` is retired in favour of the uniform
# `apm-partition-*` scheme; the import path stays `use apm_forensic::…` so
# downstream code and tests are unaffected by the package rename.
[dependencies]
apm = { workspace = true }
serde = { workspace = true, optional = true }
# Knowledge layer (sibling repo): Apple Partition Map partition-type strings.
forensicnomicon.workspace = true

[features]
default = []
# Derive `serde::Serialize` on the analysis types for JSON report output.
serde = ["dep:serde", "apm/serde", "forensicnomicon/serde"]

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
