[package]
name = "apm-forensic-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.apm-forensic]
path = ".."

[[bin]]
name = "analyse"
path = "fuzz_targets/analyse.rs"
test = false
doc = false
bench = false
